--- a/.github/workflows/ca-tests.yml
+++ b/.github/workflows/ca-tests.yml
@@ -22,6 +22,11 @@ jobs:
           else
               echo "::set-output name=matrix::${{ secrets.MATRIX }}"
           fi
+      - name: Hello World!
+        id: foo
+        uses: magic/action@v1
+        with:
+          who-to-greet: 'Mona the Octocat'
 
   # docs/development/Building_PKI.md
   build:
