--- a/.github/workflows/qe-tests.yml
+++ b/.github/workflows/qe-tests.yml
@@ -15,12 +15,15 @@ jobs:
         run: |
           export latest=$(cat /etc/fedora-release | awk '{ print $3 }')
           export previous=$(cat /etc/fedora-release | awk '{ print $3 - 1}')
+          export test_matrix=$(cat $GITHUB_ACTION_PATH/test-matrix.json)
           echo "Running CI against Fedora $previous and $latest"
-          if [ "${{ secrets.MATRIX }}" == "" ]
+          pwd
+          echo "$GITHUB_ACTION_PATH"
+          if [ "$test_matrix" == "" ]
           then
               echo "::set-output name=matrix::{\"os\":[\"$previous\", \"$latest\"]}"
           else
-              echo "::set-output name=matrix::${{ secrets.MATRIX }}"
+              echo "::set-output name=matrix::\"$test_matrix\""
           fi
 
   # docs/development/Building_PKI.md
