--- a/base/server/CMakeLists.txt
+++ b/base/server/CMakeLists.txt
@@ -75,6 +75,8 @@ if(WITH_TEST)
             ${SLF4J_API_JAR} ${SLF4J_SIMPLE_JAR}
             ${PKI_CMSUTIL_JAR} ${PKI_CERTSRV_JAR} ${PKI_CMS_JAR} ${PKI_CMSBUNDLE_JAR}
             ${LDAPJDK_JAR} ${SERVLET_JAR}
+            ${JACKSON2_CORE_JAR} ${JACKSON2_DATABIND_JAR}
+            ${JACKSON2_ANNOTATIONS_JAR}
             ${COMMONS_CODEC_JAR} ${COMMONS_LANG3_JAR}
             ${JSS_JAR} ${SYMKEY_JAR}
             ${HAMCREST_JAR} ${JUNIT_JAR} ${COMMONS_IO_JAR}
