Add -Dcom.redhat.fips=false to pki.conf
Prevents race condition where sunpkcs11 prevents JSS from binding to NSS
causing IPA server creation to fail in FIPS mode

Resolves BZ1999052

--- a/base/common/share/etc/pki.conf
+++ b/base/common/share/etc/pki.conf
@@ -14,6 +14,10 @@ export JAVA_HOME
 PKI_JAVA_PATH=${PKI_JAVA_PATH}
 export PKI_JAVA_PATH
 
+# JVM options
+FIPS_ENABLED="-Dcom.redhat.fips=false" # Disable FIPS mode
+export FIPS_ENABLED
+
 # JNI jar file location
 JNI_JAR_DIR=/usr/lib/java
 export JNI_JAR_DIR
