DO NOT MERGE Install jaxb-api dependency in test containers

--- a/.github/workflows/ca-tests.yml
+++ b/.github/workflows/ca-tests.yml
@@ -83,7 +83,7 @@ jobs:
           tests/bin/runner-init.sh
 
       - name: Install dependencies
-        run: docker exec pki dnf install -y 389-ds-base
+        run: docker exec pki dnf install -y 389-ds-base jaxb-api
 
       - name: Install DS
         run: docker exec pki ${PKIDIR}/tests/bin/ds-create.sh
@@ -184,7 +184,7 @@ jobs:
           tests/bin/runner-init.sh
 
       - name: Install dependencies
-        run: docker exec pki dnf install -y 389-ds-base
+        run: docker exec pki dnf install -y 389-ds-base jaxb-api
 
       - name: Install DS
         run: docker exec pki ${PKIDIR}/tests/bin/ds-create.sh
@@ -277,7 +277,7 @@ jobs:
         run: docker network connect example root --alias root.example.com
 
       - name: Install dependencies in root container
-        run: docker exec root dnf install -y 389-ds-base
+        run: docker exec root dnf install -y 389-ds-base jaxb-api
 
       - name: Install DS in root container
         run: docker exec root ${PKIDIR}/tests/bin/ds-create.sh
@@ -296,7 +296,7 @@ jobs:
         run: docker network connect example subordinate --alias sub.example.com
 
       - name: Install dependencies in subordinate container
-        run: docker exec subordinate dnf install -y 389-ds-base
+        run: docker exec subordinate dnf install -y 389-ds-base jaxb-api
 
       - name: Install DS in subordinate container
         run: docker exec subordinate ${PKIDIR}/tests/bin/ds-create.sh
@@ -399,7 +399,7 @@ jobs:
           tests/bin/runner-init.sh
 
       - name: Install dependencies
-        run: docker exec pki dnf install -y 389-ds-base
+        run: docker exec pki dnf install -y 389-ds-base jaxb-api
 
       - name: Install DS
         run: docker exec pki ${PKIDIR}/tests/bin/ds-create.sh
@@ -491,7 +491,7 @@ jobs:
           tests/bin/runner-init.sh
 
       - name: Install dependencies
-        run: docker exec pki dnf install -y 389-ds-base
+        run: docker exec pki dnf install -y 389-ds-base jaxb-api
 
       - name: Install DS
         run: docker exec pki ${PKIDIR}/tests/bin/ds-create.sh
@@ -642,7 +642,7 @@ jobs:
         run: docker network connect example primary --alias primary.example.com
 
       - name: Install dependencies in primary container
-        run: docker exec primary dnf install -y 389-ds-base
+        run: docker exec primary dnf install -y 389-ds-base jaxb-api 
 
       - name: Install DS in primary container
         run: docker exec primary ${PKIDIR}/tests/bin/ds-create.sh
@@ -661,7 +661,7 @@ jobs:
         run: docker network connect example secondary --alias secondary.example.com
 
       - name: Install dependencies in secondary container
-        run: docker exec secondary dnf install -y 389-ds-base
+        run: docker exec secondary dnf install -y 389-ds-base jaxb-api
 
       - name: Install DS in secondary container
         run: docker exec secondary ${PKIDIR}/tests/bin/ds-create.sh
@@ -695,7 +695,7 @@ jobs:
         run: docker network connect example tertiary --alias tertiary.example.com
 
       - name: Install dependencies in tertiary container
-        run: docker exec tertiary dnf install -y 389-ds-base
+        run: docker exec tertiary dnf install -y 389-ds-base jaxb-api
 
       - name: Install DS in tertiary container
         run: docker exec tertiary ${PKIDIR}/tests/bin/ds-create.sh
@@ -821,7 +821,7 @@ jobs:
           tests/bin/runner-init.sh
 
       - name: Install dependencies
-        run: docker exec pki dnf install -y 389-ds-base
+        run: docker exec pki dnf install -y 389-ds-base jaxb-api
 
       - name: Install DS
         run: docker exec pki ${PKIDIR}/tests/bin/ds-create.sh
@@ -970,7 +970,7 @@ jobs:
         run: docker network connect example primary --alias primary.example.com
 
       - name: Install dependencies in primary container
-        run: docker exec primary dnf install -y 389-ds-base
+        run: docker exec primary dnf install -y 389-ds-base jaxb-api
 
       - name: Install DS in primary container
         run: docker exec primary ${PKIDIR}/tests/bin/ds-create.sh
@@ -1072,7 +1072,7 @@ jobs:
         run: docker network connect example secondary --alias secondary.example.com
 
       - name: Install dependencies in secondary container
-        run: docker exec secondary dnf install -y 389-ds-base
+        run: docker exec secondary dnf install -y 389-ds-base jaxb-api
 
       - name: Install DS in secondary container
         run: docker exec secondary ${PKIDIR}/tests/bin/ds-create.sh
@@ -1253,7 +1253,7 @@ jobs:
           echo "Client's IP: `cat client.ip`"
 
       - name: Install dependencies in PKI container
-        run: docker exec pki dnf install -y 389-ds-base
+        run: docker exec pki dnf install -y 389-ds-base jaxb-api
 
       - name: Install DS in PKI container
         run: docker exec pki ${PKIDIR}/tests/bin/ds-create.sh
