--- a/.github/workflows/tps-tests.yml
+++ b/.github/workflows/tps-tests.yml
@@ -83,7 +83,7 @@ jobs:
           tests/bin/runner-init.sh
 
       - name: Install dependencies
-        run: docker exec pki dnf install -y 389-ds-base
+        run: docker exec pki dnf install -y 389-ds-base jaxb-api
 
       - name: Install DS
         run: docker exec pki ${PKIDIR}/tests/bin/ds-create.sh
@@ -232,7 +232,7 @@ jobs:
         run: docker network connect example primary --alias primary.example.com
 
       - name: Install dependencies in primary container
-        run: docker exec primary dnf install -y 389-ds-base
+        run: docker exec primary dnf install -y 389-ds-base jaxb-api
 
       - name: Install DS in primary container
         run: docker exec primary ${PKIDIR}/tests/bin/ds-create.sh
