--- a/.github/workflows/acme-tests.yml
+++ b/.github/workflows/acme-tests.yml
@@ -108,7 +108,7 @@ jobs:
         run: docker network connect example pki --alias pki.example.com
 
       - name: Install dependencies in PKI container
-        run: docker exec pki dnf install -y 389-ds-base
+        run: docker exec pki dnf install -y 389-ds-base jaxb-api
 
       - name: Install DS in PKI container
         run: docker exec pki ${PKIDIR}/tests/bin/ds-create.sh
@@ -260,7 +260,7 @@ jobs:
         run: docker network connect example pki --alias pki.example.com --alias server1.example.com
 
       - name: Install dependencies in PKI container
-        run: docker exec pki dnf install -y 389-ds-base jq
+        run: docker exec pki dnf install -y 389-ds-base jq jaxb-api
 
       - name: Install DS in PKI container
         run: docker exec pki ${PKIDIR}/tests/bin/ds-create.sh
