--- a/.github/workflows/kra-tests.yml
+++ b/.github/workflows/kra-tests.yml
@@ -83,7 +83,7 @@ jobs:
           tests/bin/runner-init.sh
 
       - name: Install dependencies
-        run: docker exec pki dnf install -y 389-ds-base
+        run: docker exec pki dnf install -y 389-ds-base jaxb-api
 
       - name: Install DS
         run: docker exec pki ${PKIDIR}/tests/bin/ds-create.sh
@@ -172,7 +172,7 @@ jobs:
         run: docker network connect example ca --alias ca.example.com
 
       - name: Install dependencies in CA container
-        run: docker exec ca dnf install -y 389-ds-base
+        run: docker exec ca dnf install -y 389-ds-base jaxb-api
 
       - name: Install DS in CA container
         run: docker exec ca ${PKIDIR}/tests/bin/ds-create.sh
@@ -191,7 +191,7 @@ jobs:
         run: docker network connect example kra --alias kra.example.com
 
       - name: Install dependencies in KRA container
-        run: docker exec kra dnf install -y 389-ds-base
+        run: docker exec kra dnf install -y 389-ds-base jaxb-api
 
       - name: Install DS in KRA container
         run: docker exec kra ${PKIDIR}/tests/bin/ds-create.sh
@@ -315,7 +315,7 @@ jobs:
         run: docker network connect example ca --alias ca.example.com
 
       - name: Install dependencies in CA container
-        run: docker exec ca dnf install -y 389-ds-base
+        run: docker exec ca dnf install -y 389-ds-base jaxb-api
 
       - name: Install DS in CA container
         run: docker exec ca ${PKIDIR}/tests/bin/ds-create.sh
@@ -342,7 +342,7 @@ jobs:
         run: docker network connect example kra --alias kra.example.com
 
       - name: Install dependencies in KRA container
-        run: docker exec kra dnf install -y 389-ds-base
+        run: docker exec kra dnf install -y 389-ds-base jaxb-api
 
       - name: Install DS in KRA container
         run: docker exec kra ${PKIDIR}/tests/bin/ds-create.sh
@@ -509,7 +509,7 @@ jobs:
         run: docker network connect example primary --alias primary.example.com
 
       - name: Install dependencies in primary container
-        run: docker exec primary dnf install -y 389-ds-base
+        run: docker exec primary dnf install -y 389-ds-base jaxb-api
 
       - name: Install DS in primary container
         run: docker exec primary ${PKIDIR}/tests/bin/ds-create.sh
@@ -531,7 +531,7 @@ jobs:
         run: docker network connect example secondary --alias secondary.example.com
 
       - name: Install dependencies in secondary container
-        run: docker exec secondary dnf install -y 389-ds-base
+        run: docker exec secondary dnf install -y 389-ds-base jaxb-api
 
       - name: Install DS in secondary container
         run: docker exec secondary ${PKIDIR}/tests/bin/ds-create.sh
@@ -571,7 +571,7 @@ jobs:
         run: docker network connect example tertiary --alias tertiary.example.com
 
       - name: Install dependencies in tertiary container
-        run: docker exec tertiary dnf install -y 389-ds-base
+        run: docker exec tertiary dnf install -y 389-ds-base jaxb-api
 
       - name: Install DS in tertiary container
         run: docker exec tertiary ${PKIDIR}/tests/bin/ds-create.sh
@@ -711,7 +711,7 @@ jobs:
           tests/bin/runner-init.sh
 
       - name: Install dependencies
-        run: docker exec pki dnf install -y 389-ds-base
+        run: docker exec pki dnf install -y 389-ds-base jaxb-api
 
       - name: Install DS
         run: docker exec pki ${PKIDIR}/tests/bin/ds-create.sh
