--- a/.github/workflows/ocsp-tests.yml
+++ b/.github/workflows/ocsp-tests.yml
@@ -83,7 +83,7 @@ jobs:
           tests/bin/runner-init.sh
 
       - name: Install dependencies
-        run: docker exec pki dnf install -y 389-ds-base
+        run: docker exec pki dnf install -y 389-ds-base jaxb-api
 
       - name: Install DS
         run: docker exec pki ${PKIDIR}/tests/bin/ds-create.sh
@@ -166,7 +166,7 @@ jobs:
         run: docker network connect example ca --alias ca.example.com
 
       - name: Install dependencies in CA container
-        run: docker exec ca dnf install -y 389-ds-base
+        run: docker exec ca dnf install -y 389-ds-base jaxb-api
 
       - name: Install DS in CA container
         run: docker exec ca ${PKIDIR}/tests/bin/ds-create.sh
@@ -193,7 +193,7 @@ jobs:
         run: docker network connect example ocsp --alias ocsp.example.com
 
       - name: Install dependencies in OCSP container
-        run: docker exec ocsp dnf install -y 389-ds-base
+        run: docker exec ocsp dnf install -y 389-ds-base jaxb-api
 
       - name: Install DS in OCSP container
         run: docker exec ocsp ${PKIDIR}/tests/bin/ds-create.sh
@@ -345,7 +345,7 @@ jobs:
         run: docker network connect example primary --alias primary.example.com
 
       - name: Install dependencies in primary container
-        run: docker exec primary dnf install -y 389-ds-base
+        run: docker exec primary dnf install -y 389-ds-base jaxb-api
 
       - name: Install DS in primary container
         run: docker exec primary ${PKIDIR}/tests/bin/ds-create.sh
@@ -367,7 +367,7 @@ jobs:
         run: docker network connect example secondary --alias secondary.example.com
 
       - name: Install dependencies in secondary container
-        run: docker exec secondary dnf install -y 389-ds-base
+        run: docker exec secondary dnf install -y 389-ds-base jaxb-api
 
       - name: Install DS in secondary container
         run: docker exec secondary ${PKIDIR}/tests/bin/ds-create.sh
@@ -407,7 +407,7 @@ jobs:
         run: docker network connect example tertiary --alias tertiary.example.com
 
       - name: Install dependencies in tertiary container
-        run: docker exec tertiary dnf install -y 389-ds-base
+        run: docker exec tertiary dnf install -y 389-ds-base jaxb-api
 
       - name: Install DS in tertiary container
         run: docker exec tertiary ${PKIDIR}/tests/bin/ds-create.sh
@@ -547,7 +547,7 @@ jobs:
           tests/bin/runner-init.sh
 
       - name: Install dependencies
-        run: docker exec pki dnf install -y 389-ds-base
+        run: docker exec pki dnf install -y 389-ds-base jaxb-api
 
       - name: Install DS
         run: docker exec pki ${PKIDIR}/tests/bin/ds-create.sh
