DO NOT MERGE Set SWCP to FUTURE
Setting the system wide crypto policy to FUTURE prevents the use of
SHA-1 (and lots of other stuff)

This commit checks whether Dogtag can operate in this more restrictive
environment.

--- a/.github/workflows/ca-tests.yml
+++ b/.github/workflows/ca-tests.yml
@@ -97,6 +97,9 @@ jobs:
       - name: Connect PKI container to network
         run: docker network connect example pki --alias pki.example.com
 
+      - name: Set System Wide Crypto Policy to FUTURE
+        run: docker exec pki update-crypto-policies --set FUTURE
+
       - name: Install CA
         run: |
           docker exec pki pkispawn \
