EST: create 'est' subsystem
This commit extracts the EST service as a separate Dogtag subsystem,
called "est".  This commit gets the JAR and RPM building cleanly.
However, the following critical features are still to come:

- An "RA" backend unto the CA subsystem (for cert issuance)
- The ESTApplication class (i.e. the Tomcat application itself)
- Deployment capability (e.g. `pki-server est-deploy` command)

These will be provided in subsequent commits.

Part of: https://github.com/dogtagpki/pki/issues/3297

--- a/base/CMakeLists.txt
+++ b/base/CMakeLists.txt
@@ -420,6 +420,10 @@ if (BUILD_PKI_CORE OR BUILD_PKI_CONSOLE)
         add_subdirectory(acme)
     endif(WITH_ACME)
 
+    if(WITH_EST)
+        add_subdirectory(est)
+    endif(WITH_EST)
+
     if(WITH_JAVADOC)
         add_subdirectory(javadoc)
     endif(WITH_JAVADOC)
