EST: implement ExternalProcessRequestAuthorizer
Implement the ExternalProcessRequestAuthorizer.  This implementation
executes the configured executable as a subprocess.  It pipes the
request authz data, CSR and label to the subprocess standard input
as a JSON object.  The request is authorized if the subprocess exits
normally (exit status 0).  If the subprocess does get created but
exits abnormally, throws ForbiddenException using the subprocess
standard output as the message.

Part of: https://github.com/dogtagpki/pki/issues/3297

--- a/base/est/CMakeLists.txt
+++ b/base/est/CMakeLists.txt
@@ -8,6 +8,11 @@ javac(pki-est-classes
         ${JAXRS_API_JAR}
         ${SLF4J_API_JAR}
         ${COMMONS_CODEC_JAR}
+        ${COMMONS_IO_JAR}
+        ${JACKSON2_ANNOTATIONS_JAR}
+        ${JACKSON2_CORE_JAR}
+        ${JACKSON2_DATABIND_JAR}
+        ${TOMCAT_CATALINA_JAR}
         ${JSS_JAR}
         ${PKI_CMSUTIL_JAR}
         ${PKI_CERTSRV_JAR}
